# benchmarks-ipdps22

./: Cargo.toml
resources/: MD5Hash.cu  Spmv.cu  black_scholes.cu  cgc.cu  diff_4.cu  gpu_correlator_3x2.cu  hotspot.cu  kmeans.cu  mandelbrot.cu  matmul.cu  nbody.cu
src/: allocator.rs  bandwidth.rs  black_scholes.rs  cgc.rs  correlator.rs  gemm.rs  hotspot.rs  kmeans.rs  main.rs  mandelbrot.rs  md5hash.rs  microhh.rs  nbody.rs  saxpy.rs  spmv.rs  stencil.rs  util.rs
